# FallingUp

./: .gitignore  BUILD  Makefile-dmg  Makefile.am  Makefile.lin  Makefile.osx  Makefile.win  README  bootstrap.clean  configure.ac  fallingup.nsi
resources/: Makefile.am
resources/images/: Makefile.am  background.raw  mainscreen.raw
resources/images/tiles/: Makefile.am  bauble.raw  gem.raw  glass.raw  pencil.raw  stripes.raw  swiss.raw
resources/sounds/: Makefile.am
src/: Makefile.am  fallingup.c  icon.rc  imagelib.c  imagelib.h  os.h
